src/test/ui/liveness/liveness-move-in-loop.stderr
error[E0382]: use of moved value: `y`
  --> $DIR/liveness-move-in-loop.rs:11:25
   |
LL |     let y: Box<isize> = 42.into();
   |         - move occurs because `y` has type `Box<isize>`, which does not implement the `Copy` trait
...
LL |                     x = y;
   |                         ^ value moved here, in previous iteration of loop

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
